--- a/style.css
+++ b/style.css
@@ -7,5 +7,118 @@
 }
 
 body {
-  background: rgb(249, 248, 248);
+  background-image: url("images/bg.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  
+}
+
+
+hr {
+    border-top: 1px solid white;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  margin: 5rem;
+}
+
+.weather-input {
+  width: 40%;
+  position: fixed;
+  inset: 0;
+  background: linear-gradient(to top, rgb(0,0,0,0.15), 
+  rgb(255,255,255,0.15));
+  padding: 20px 30px;
+  z-index: 1;
+  border-radius: 12px;
+  backdrop-filter: blur(10px);
+}
+
+.input-group {
+  position: relative;
+  display: flex;
+  margin: 2rem 0;
+  align-items: center;
+}
+
+.input-group input{
+  background: rgb(255,255,255,0.15);
+  text-transform: capitalize;
+  padding: 1rem;
+  font-size: 15px;
+  border-radius: 6px;
+  width: 100%;
+  outline: none;
+  border: none;
+}
+
+.input-group .converter{
+  position: absolute;
+  right: 50px;
+  border:1px solid #fff;
+  outline: none;
+  font-size: 18px;
+  background: transparent;
+  padding: 0 1rem;
+  border-radius: 0 6px 6px 0;
+  cursor: pointer;
+}
+
+.input-group .fa-magnifying-glass{
+  position: absolute;
+  right: 10px;
+  font-size: 22px;
+  color: #010101;
+  cursor: pointer;
+}
+
+.weather-output {
+  width: 60%;
+  position: fixed;
+  inset: 0;
+  margin-left: 40%;
+  padding: 2rem;
+  background: transparent;
+  overflow: auto;
+}
+
+.Highlights{
+  display: grid;
+  grid-template-columns: repeat(3, 350px);
+  grid-auto-flow: row;
+  row-gap: 1rem;
+  column-gap: 10px;
+  color: #fff;
+}
+.heading{
+  color:#010101;
+}
+
+.Highlights div{
+  height: 200px;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background: linear-gradient(to top, rgb(0,0,0,0.15), 
+  rgb(255,255,255,0.15));
+  border-radius: 20px;
+  padding: 1rem;
+  z-index: 1;
+  backdrop-filter: blur(20px);
+}
+
+.Highlights i{
+  font-size: 45px;
+
+}
+
+.sun span{
+  align-items: center;
+  display: flex;
+  gap: 10px;
 }
